--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -440,3 +440,125 @@ header.overflow.fixed {
     .upcomming-events-list li .price {max-width: 30%;}
 }
 
+
+.signupnewslatter {
+  padding: 70px 0;
+}
+.signup-newslatteer h2 {
+  text-align: center;
+  font-size: 38px;
+  text-transform: uppercase;
+  line-height: 50px;
+  margin-bottom: 10px;;
+}
+.signup-newslatteer p {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+#newsletter {
+  max-width: 450px;
+  margin: 0 auto;
+  position: relative;
+}
+#newsletter input {
+  border: 2px solid #4bbcf7;
+  border-radius: 50px;
+  padding: 10px 20px;
+  height: auto;
+  color: #000;
+}
+#newsletter button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #4bbcf7;
+  border-radius: 50px;
+  padding: 11px 30px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.another-row{
+  width: 33.333%;
+  padding: 0 15px;
+}
+.single-pricing {
+	position: relative;
+	padding: 60px 50px;
+	background-size: cover;
+	background-position: center;
+}
+.single-pricing:before {
+  content: '';
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
+  background-color: #fff;
+  transition: all .5s ease 0s;
+}
+.pricing-box {
+  position: relative;
+}
+.pricing-box h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: bold;
+  line-height: 20px;
+  margin: 0;
+}
+.pricing-box p {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 14px;
+  margin-bottom: 20px;
+}
+.pricing-box h1 {
+  font-size: 60px;
+  line-height: 70px;
+  font-weight: bold;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 20px;
+}
+.pricing-box h6 {
+  color: #000;
+}
+.pricing-packages {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.choose-area h2 {
+  text-align: center;
+  color: #000;
+  font-size: 50px;
+  line-height: 60px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.choose-area > p {
+  max-width: 650px;
+  margin: 0 auto;
+  text-align: center;
+}
+.choose-deals {
+  padding: 70px 0;
+}
+.single-pricing > a {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9;
+  
+}
+.single-pricing:hover::before {
+	transform: scale(1.05);
+}
