--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,3 @@
-::after, ::before {
-	content: '';
-}
 .section.sell-music {
     padding: 70px 0;
     background-color: #000;
@@ -563,4 +560,98 @@ header.overflow.fixed {
 }
 .single-pricing:hover::before {
 	transform: scale(1.05);
+}
+.package-pricing .single-pricing label {
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9;
+}
+.package-pricing .single-pricing label input{
+  opacity: 0;
+}
+
+.step-title h2 {
+  font-size: 40px;
+  line-height: 60px;
+}
+.step-title p {
+  font-size: 18px;
+}
+.step-title {
+  margin-bottom: 30px;
+}
+.total-artist {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.single-artist {
+  max-width: 300px;
+  height: 300px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-right: 20px;
+}
+.single-artist label {
+  background-color: #5e5e5e;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.single-artist label h4 {
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.user-details input, .user-details select {
+	border: 1px solid #ededed;
+	border-radius: 5px;
+	color: #000;
+	padding: 12px 15px;
+	height: auto;
+	margin-bottom: 20px;
+	width: 100%;
+}
+.step-next {
+	display: flex;
+	justify-content: flex-end;
+	margin: 15px 0;
+}
+.single-artist input {
+  display: none;
+}
+.step-next button {
+	color: #fff;
+	background-color: #4bbcf7;
+}
+.total-steps {
+	padding: 60px 0;
+}
+.single-artist input:checked + label {
+	background-color: #4bbcf7;
+}
+.single-pricing input:checked + label {
+	border: 20px solid #000;
+}
+.display-none {
+	max-height: 0;
+	overflow: hidden;
+	transition: all .5s ease-in-out;
+}
+.error-code {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
