--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1601,22 +1601,21 @@ select {
 	margin: 0 auto;
 }
 .background-videos > video {
-	position: fixed;
+	position: relative;
 	left: 0;
 	top: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 354px;
+	height: 105px;
 	object-fit: cover;
-	/* z-index: -1; */
 }
 .background-videos {
 	position: relative;
-	z-index: -1;
 }
 .main_background {
 	position: relative;
 	width: 100%;
 	height: 100vh;
+	background-color: #000;
 }
 button.text-white.uppercase {
 	background-color: #4bbcf7;
