--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -16082,3 +16082,15 @@ dl {
 .nav-link img {
 	max-width: 100%;
 }
+.form-group label {
+	display: block;
+	font-weight: bold;
+}
+select.form-control, .select2-container--default select.select2-selection--single, .select2-container--default .select2-selection--single select.select2-search__field, select.typeahead, select.tt-query, select.tt-hint {
+	padding: 18px .75rem;
+	background-color: #fff;
+}
+
+.form-group input[type="radio"] {
+	margin-right: 5px;
+}
